--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "providers": {
       "googleSignIn": {
         "supportEmail": "wadareaf@gmail.com",
-        "oAuthBrandDisplayName": "LearnEng"
+        "oAuthBrandDisplayName": "learneng-20588"
       }
     }
   },
