--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
