--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "chart.js": "^4.5.1",
     "firebase": "^12.9.0",
     "next": "^16.1.6",
